<resources>
    <string name="app_name">Github app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchHintText">Search...</string>
    <string name="searchTextButton">SEARCH</string>
    <string name="githubLogoContentDescriptionText">Github logo</string>
    <string name="filterIconContentDescriptionText">Filter icon</string>
    <string name="bottomSheetHeaderText">Look for</string>
    <string name="repositoriesCheckBoxText">Repositories</string>
    <string name="usersCheckBoxText">Users</string>
    <string name="applyButtonText">Apply</string>
    <string name="authorDetailsText">Author \ndetails</string>
    <string name="openInBrowserText">Open in \nbrowser</string>
    <string name="openProfileText">Open\nprofile</string>
    <string name="openRepositoriesText">Open\nrepositories</string>
    <string name="errorMessageText">An error occurred</string>
    <string name="noDataMessageText">No data to display!</string>
    <string name="snackbarQueryInfoMessage">Query must contain at least 2 characters!</string>
</resources>